@@ -8626,9 +8626,8 @@ need to support linker plugins to allow a full-featured build environment
 @command{gcc-nm}, @command{gcc-ranlib} wrappers to pass the right options
 to these tools. With non fat LTO makefiles need to be modified to use them.
 
-The default is @option{-ffat-lto-objects} but this default is intended to
-change in future releases when linker plugin enabled environments become more
-common.
+The default is @option{-fno-fat-lto-objects} on targets with linker plugin
+support.
 
 @item -fcompare-elim
 @opindex fcompare-elim
